Avoid overstretching at higher resolutions

--- a/style.css
+++ b/style.css
@@ -187,6 +187,8 @@ header {
 
 @media screen and (min-width: 35rem) {
     .overall-container {
+        max-width: 1440px;
+        margin: 0 auto;
         padding-inline: 7rem;
         padding-block: 3rem;
     }
